force-app/main/default/objects/pd_jp_20151124__VisitorPageView__c/pd_jp_20151124__VisitorPageView__c.object-meta.xml
<CustomObject>
    <label>MAPlusAC VisitorPageView</label>
    <nameField>
        <displayFormat>{YYYY}{MM}{DD}{000000}</displayFormat>
        <label>VisitorPageView名</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>