force-app/main/default/objects/pd_jp_20151124__VisitorPageView__c/fields/pd_jp_20151124__CreatedAt__c.field-meta.xml
<CustomField>
    <fullName>pd_jp_20151124__CreatedAt__c</fullName>
    <label>created_at</label>
    <type>DateTime</type>
</CustomField>