force-app/main/default/objects/pd_jp_20151124__VisitorPageView__c/fields/pd_jp_20151124__PageStaySeconds__c.field-meta.xml
<CustomField>
    <fullName>pd_jp_20151124__PageStaySeconds__c</fullName>
    <label>ページ滞在期間（秒）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>