force-app/main/default/objects/pd_jp_20151124__VisitorPageView__c/fields/pd_jp_20151124__Source_Url__c.field-meta.xml
<CustomField>
    <fullName>pd_jp_20151124__Source_Url__c</fullName>
    <label>遷移元ページURL</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>