force-app/main/default/objects/pd_jp_20151124__VisitorPageView__c/fields/pd_jp_20151124__Url__c.field-meta.xml
<CustomField>
    <fullName>pd_jp_20151124__Url__c</fullName>
    <label>URL</label>
    <type>Url</type>
</CustomField>