force-app/main/default/objects/pd_jp_20151124__VisitorPageView__c/fields/pd_jp_20151124__VisitId__c.field-meta.xml
<CustomField>
    <fullName>pd_jp_20151124__VisitId__c</fullName>
    <label>VisitID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>