force-app/main/default/objects/pd_jp_20151124__VisitorPageView__c/fields/pd_jp_20151124__VisitorActivity__c.field-meta.xml
<CustomField>
    <fullName>pd_jp_20151124__VisitorActivity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MAPlusAC VisitorActivity</label>
    <referenceTo>pd_jp_20151124__ABM_VisitorActivity__c</referenceTo>
    <relationshipLabel>MAPlusAC VisitorPageView</relationshipLabel>
    <relationshipName>VisitorPageView</relationshipName>
    <type>Lookup</type>
</CustomField>