force-app/main/default/objects/pd_jp_20151124__VisitorPageView__c/fields/pd_jp_20151124__VisitorActivityId__c.field-meta.xml
<CustomField>
    <fullName>pd_jp_20151124__VisitorActivityId__c</fullName>
    <label>VisitorActivityID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>