force-app/main/default/objects/pd_jp_20151124__VisitorPageView__c/listViews/pd_jp_20151124__alllist.listView-meta.xml
<ListView>
    <fullName>pd_jp_20151124__alllist</fullName>
    <columns>NAME</columns>
    <columns>pd_jp_20151124__Pardot_DocodocoJp__c</columns>
    <columns>pd_jp_20151124__VisitorId__c</columns>
    <columns>pd_jp_20151124__Id__c</columns>
    <columns>pd_jp_20151124__CreatedAt__c</columns>
    <columns>pd_jp_20151124__Title__c</columns>
    <columns>pd_jp_20151124__Url__c</columns>
    <columns>pd_jp_20151124__VisitId__c</columns>
    <columns>pd_jp_20151124__VisitorActivity__c</columns>
    <columns>pd_jp_20151124__AC_Prospect__c</columns>
    <columns>pd_jp_20151124__PageStaySeconds__c</columns>
    <columns>pd_jp_20151124__Source_Url__c</columns>
    <columns>pd_jp_20151124__Source_Title__c</columns>
    <columns>pd_jp_20151124__Destination_Url__c</columns>
    <columns>pd_jp_20151124__Destination_Title__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>